--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <link rel="shortcut icon" href="{{" /img/github.ico" | prepend: site.baseurl }}"/>
+    <link rel="bookmark" href="{{ "/img/github.ico" | prepend: site.baseurl}}"/>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
