--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,9 @@ a:visited { color: #205caa; }
   z-index: 1;
 }
 
-.site-title:hover { text-decoration: underline; }
+.site-title:hover {
+  text-decoration: underline;
+ }
 
 .site-title h1{font-size: 36px}
 
@@ -82,7 +84,7 @@ a:visited { color: #205caa; }
 
 .site-footer {
   border-top: 1px solid #e8e8e8;
-  padding-top:50px;
+  padding-top:30px;
 }
 
 .footer-heading {
@@ -143,9 +145,9 @@ a:visited { color: #205caa; }
 .page-content {
   padding-top: 35px;
   background-color: #fff;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
 }
-.page-content .wrap{padding-bottom: 35px;}
+.page-content .wrap{padding-bottom: 15px;}
 
 
 /* Home styles */
@@ -159,12 +161,12 @@ a:visited { color: #205caa; }
 
 .posts { list-style-type: none; }
 
-.posts li { margin-bottom: 23px; }
+.posts li { margin-bottom: 3px; }
 
 
 
 .posts .post-link {
-  font-size: 24px;
+  font-size: 20px;
   letter-spacing: 0.5px;
   line-height: 1;
   font-weight: bold;
@@ -172,6 +174,19 @@ a:visited { color: #205caa; }
 }
 
 .post-link :hover{ color:#000000; }
+
+.posts li a:hover{
+  /*color: #3276B1;*/
+  background: #d8d8d8;
+  cursor: pointer;
+}
+
+.posts li a{
+  display: block;
+  padding: 10px 10px 10px 20px;
+  text-shadow: none;
+  border-radius: 15px;
+}
 
 .posts .post-date {
   display: inline-block;
@@ -186,8 +201,8 @@ a:visited { color: #205caa; }
 
 .post { width:880px; margin:auto;margin-left:  }
 
-.post-header { 
-  margin: 10px 0 30px; 
+.post-header {
+  margin: 10px 0 30px;
   line-height: 3;
 }
 
@@ -209,10 +224,10 @@ a:visited { color: #205caa; }
   color: #000000;
 }
 
-.post-content { 
+.post-content {
   font-size: 1.1em;
   font-weight: 600;
-  margin: 0 0 60px; 
+  margin: 0 0 60px;
 }
 
 .post-content > * { margin: 20px 0; }
@@ -268,7 +283,7 @@ a:visited { color: #205caa; }
   font-size: 10px;
 }
 
-.post-content table th, 
+.post-content table th,
 .post-content table td {
 border: 1px solid #DDD;
 padding: 6px 13px;
@@ -499,12 +514,12 @@ height:1px;border:none;border-top:1px solid #F0E8E8;
 
 /*lib*/
 /* ----------------------------------------------------------*/
-.banner { 
-  position: relative; 
-  overflow: hidden; 
+.banner {
+  position: relative;
+  overflow: hidden;
 }
 .banner li { list-style: none; }
-.banner ul li { 
+.banner ul li {
   float: left;
 }
 
@@ -515,7 +530,7 @@ height:1px;border:none;border-top:1px solid #F0E8E8;
 }
 
 .page-content   .test img {
-  width:100%; 
+  width:100%;
   height:100%;
 
 }
@@ -529,5 +544,60 @@ img {
 
 
 /* ----------------------------------------------------------*/
+/*分页器*/
 /* ----------------------------------------------------------*/
+.pagination{
+  padding-left:41px;
+  padding-top:25px;
+  padding-bottom:35px;
+  }
+ul{border:0; margin:0; padding:0;margin:0 auto;}
 
+#pagination-flickr li{
+border:0; margin:0; padding:0;
+font-size:20px;
+list-style:none;
+text-align:center;
+}
+#pagination-flickr a{
+border:solid 1px #DDDDDD;
+margin-right:2px;
+border-radius:6px;
+}
+#pagination-flickr .previous-off,
+#pagination-flickr .next-off {
+color:#BDBABA;
+display:block;
+float:left;
+font-weight:bold;
+padding:3px 4px;
+width: 50px;
+text-align: center;
+border-radius:6px;
+}
+#pagination-flickr .next a,
+#pagination-flickr .previous a {
+font-weight:bold;
+border:solid 1px #FFFFFF;
+width: 50px;
+text-align: center;
+border-radius:6px;
+}
+#pagination-flickr .active{
+color:#ff0084;
+font-weight:bold;
+display:block;
+float:left;
+padding:4px 8px;
+}
+#pagination-flickr a:link,
+#pagination-flickr a:visited {
+color:#4B4B4B;
+display:block;
+float:left;
+padding:3px 8px;
+text-decoration:none;
+}
+#pagination-flickr a:hover{
+border:solid 1px #9C9A9A;
+}
