--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,8 @@
         {% for page in site.pages %}
         {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-        {% endif %}{% endif %}{% endfor %}
+        {% endif %}
+        {% endfor %}
       </div>
     </nav>
   </div>
