--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,8 @@ text-align: -webkit-match-parent;
   border-radius:0;
   border-top-right-radius:5px;
   border-bottom-right-radius:5px;
-  padding:10px 15px
+  padding:10px 15px;
+  overflow:overlay;
 }
 .post pre code {
   background-color:transparent !important
