改变分页活动图标颜色

--- a/css/main.css
+++ b/css/main.css
@@ -596,7 +596,7 @@ text-align: center;
 border-radius:6px;
 }
 #pagination-flickr .active{
-color:#ff0084;
+color:#BEBBBD;
 font-weight:bold;
 display:block;
 float:left;
