加入返回顶部

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,5 +31,23 @@ var duoshuoQuery = {short_name:"taizilongxu"};
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
     </script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
+    <script type="text/javascript">
+
+$(window).scroll(function() {
+
+    if($(this).scrollTop() > 100) {
+        $('.scroll-top').fadeIn(200);
+    } else {
+        $('.scroll-top').fadeOut(200);
+    }
+});
+
+$('.scroll-top').bind('click', function(e) {
+    e.preventDefault();
+    $('body,html').animate({scrollTop:0},200);
+});
+</script>
     </body>
 </html>
