--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,4 +34,5 @@
       <p class="text">{{ site.description }}</p>
     </div>
   </div>
+  <div class="scroll-top"><i class="fa fa-arrow-circle-up"></i></div>
 </footer>
