--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,8 @@
 <link rel="stylesheet" href="{{"/css/github.css"| prepend:site.baseurl}}">
 <script src="{{"/js/highlight.pack.js"|prepend:site.baseurl}}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+  <!-- 返回顶部 -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.1.min.js"></script>
 
 </head>
