--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ a:visited { color: #205caa; }
 
 .site-footer {
   border-top: 1px solid #e8e8e8;
-  padding-top:30px;
+  padding-top:20px;
   position: relative;
 	margin-top: -50px; /* footeré«åº¦çè´å¼ */
 	height: 50px;
@@ -612,4 +612,42 @@ text-decoration:none;
 }
 #pagination-flickr a:hover{
 border:solid 1px #9C9A9A;
+}
+
+/* ----------------------------------------------------------*/
+/*返回顶部*/
+/* ----------------------------------------------------------*/
+.site-footer .scroll-top {
+  position: fixed;
+  bottom: 80px;
+  right: 80px;
+  display: none;
+  font-size: 70px;
+  cursor: pointer;
+  opacity: 0.4;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  z-index: 199;
+}
+
+@media screen and (max-width: 992px) {
+  .site-footer .scroll-top {
+    bottom: 0;
+    right: 10px;
+    font-size: 50px;
+  }
+}
+
+.fa-arrow-circle-up:before {
+content: "\f0aa";
+}
+
+.fa {
+display: inline-block;
+font-family: FontAwesome;
+font-style: normal;
+font-weight: normal;
+line-height: 1;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
 }
