i浏览器firefox兼容

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ text-align: -webkit-match-parent;
   border-top-right-radius:5px;
   border-bottom-right-radius:5px;
   padding:10px 15px;
-  overflow:overlay;
+  overflow:auto;
 }
 .post pre code {
   background-color:transparent !important
