删去footer,增加github图标滑动效果

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,12 @@
 <footer class="site-footer">
-  <div class="wrap">
+  <!-- <div class="wrap">
     <div class="footer-col-1 column">
       <ul>
-        <!-- <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li> -->
         <h2 class="footer-heading"> <p  align="left" >安,要记得你心里的<font style="color:#39B3D7">梦</font><font style="color:#D9534F">想</font></p> </h2>
       </ul>
-    </div>
+    </div> -->
 
-    <div class="footer-col-2 column">
-      <ul>
-        <li>
-          <a href="https://github.com/{{ site.username }}">
+    <div class="footer-col-1 column">
             <span class="icon github">
               <svg version="1.1" class="github-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
@@ -25,14 +21,13 @@
                 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
               </svg>
             </span>
-            <span class="username">{{ site.username }}</span>
+          <a href="https://github.com/taizilongxu">
+            Fork me on github
           </a>
-        </li>
-      </ul>
     </div>
-    <div class="footer-col-3 column">
+    <!-- <div class="footer-col-3 column">
       <p class="text">{{ site.description }}</p>
-    </div>
+    </div> -->
   </div>
   <div class="scroll-top"><i class="fa fa-arrow-circle-up"></i></div>
 </footer>
