--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,8 @@
     </div> -->
 
     <div class="footer-col-1 column">
-            <span class="icon github">
+      <div class="github">
+            <!-- <span class="icon github"> -->
               <svg version="1.1" class="github-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
                 <path fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761
@@ -20,7 +21,8 @@
                 c0,2.981-1.814,3.637-3.543,3.829c0.279,0.24,0.527,0.713,0.527,1.437c0,1.037-0.01,1.874-0.01,2.129
                 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
               </svg>
-            </span>
+            <!-- </span> -->
+          </div>
           <a href="https://github.com/taizilongxu">
             Fork me on github
           </a>
