--- a/css/main.css
+++ b/css/main.css
@@ -84,8 +84,9 @@ a:visited { color: #205caa; }
 .site-footer {
   border-top: 1px solid #e8e8e8;
   padding-top:20px;
+  padding-bottom:30px;
   position: relative;
-	margin-top: -50px; /* footeré«åº¦çè´å¼ */
+	margin-top: -50px;
 	height: 50px;
 	clear:both;
 }
@@ -106,19 +107,20 @@ a:visited { color: #205caa; }
   width: -o-calc(35% - 10px);
   width: calc(35% - 10px);
   margin-left: 280px;
+  margin-top: 27px;
 }
 
 .footer-col-1 a{
   color:#A8A8A8;
   transition:padding 0.6s;
-  padding-left:15px;
+  padding-left:60px;
   font-weight:bold;
 }
 
 .footer-col-1 a:hover {
   color: #00a9a9;
   text-decoration: none;
-  padding-left: 40px;
+  padding-left: 80px;
 }
 
 
@@ -131,15 +133,23 @@ a:visited { color: #205caa; }
   color: #828282;
 }
 
-.github-icon-svg,
-.twitter-icon-svg {
+.github-icon-svg {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   position: relative;
-  top: 3px;
+  top: 12px;
 }
 
+.github {
+  position: absolute;
+  transition: transform 2s ease-out;
+  top:22px;
+}
+
+.github:hover{
+  transform:rotateZ(360deg);
+}
 
 /* Page Content styles */
 /* ----------------------------------------------------------*/
