--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ a:visited { color: #205caa; }
   max-width: 830px;
   margin: 0 auto;
   zoom: 1;
+  text-align: left;
 }
 
 
@@ -185,6 +186,7 @@ a:visited { color: #205caa; }
   line-height: 1;
   font-weight: bold;
   color: #525252;
+  text-align: left;
 }
 
 .post-link :hover{ color:#000000; }
