解决分页器居中

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <h2 class="footer-heading"> <p  align="left" >安,要记得你心里的<font style="color:#39B3D7">梦</font><font style="color:#D9534F">想</font></p> </h2>
       </ul>
     </div> -->
-
+<div class="wrap">
     <div class="footer-col-1 column">
       <div class="github">
             <!-- <span class="icon github"> -->
@@ -31,5 +31,6 @@
       <p class="text">{{ site.description }}</p>
     </div> -->
   </div>
+</div>
   <div class="scroll-top"><i class="fa fa-arrow-circle-up"></i></div>
 </footer>
