--- a/css/main.css
+++ b/css/main.css
@@ -569,19 +569,30 @@ img {
 /*分页器*/
 /* ----------------------------------------------------------*/
 .pagination{
-  padding-left:41px;
   padding-top:25px;
   padding-bottom:35px;
-  margin-bottom: 25px;
+  overflow:hidden;
   }
-ul{border:0; margin:0; padding:0;margin:0 auto;}
+#pagination-flickr {
+  border:0;
+  padding:4px 0;
+  margin:0;
+  float:left;
+  position:relative;
+  left:50%;
+  }
 
 #pagination-flickr li{
 border:0; margin:0; padding:0;
 font-size:20px;
 list-style:none;
 text-align:center;
+display:inline;
+float:left;
+position:relative;
+right:50%;
 }
+
 #pagination-flickr a{
 border:solid 1px #DDDDDD;
 margin-right:2px;
