--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,5 @@
 <footer class="site-footer">
-  <!-- <div class="wrap">
-    <div class="footer-col-1 column">
-      <ul>
-        <h2 class="footer-heading"> <p  align="left" >安,要记得你心里的<font style="color:#39B3D7">梦</font><font style="color:#D9534F">想</font></p> </h2>
-      </ul>
-    </div> -->
+
 <div class="wrap">
     <div class="footer-col-1 column">
       <div class="github">
@@ -27,10 +22,12 @@
             Fork me on github
           </a>
     </div>
+      <div class="footer-col-2">
+           <p  align="left" style="font-size:18px;color:#A8A8A8">安,要记得你心里的梦想</p>
+      </div>
     <!-- <div class="footer-col-3 column">
       <p class="text">{{ site.description }}</p>
     </div> -->
-  </div>
 </div>
   <div class="scroll-top"><i class="fa fa-arrow-circle-up"></i></div>
 </footer>
