--- a/css/main.css
+++ b/css/main.css
@@ -635,6 +635,7 @@ display:block;
 float:left;
 padding:3px 8px;
 text-decoration:none;
+font-weight:bold;
 }
 #pagination-flickr a:hover{
 border:solid 1px #9C9A9A;
