--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 html, body { height: 100%; }
 
 body {
-  font-family: 'Open Sans',"Trebuchet MS",Helvetica,sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.1;
   font-weight: 300;
   background-color: #fdfdfd;
