--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@ MathJax.Hub.Config({
 <script type="text/javascript"
  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
+<!-- highlight -->
+<script src="{{"/js/highlight.pack.js"|prepend:site.baseurl}}"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 <!-- duoshuo -->
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"taizilongxu"};
