--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,10 @@ layout: default
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
-    <p class="meta"><span class="pre">date:</span>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
+    <p class="meta">⌚ {{ page.date | date: "%Y-%m-%d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
     {% if page.category %}<span class="pre">categories:</span>{{ page.category }} {% endif %}{% if page.tags %}<span class="pre">tags:</span>{{ page.tags }} {% endif %}
     </p>
-    
+
   </header>
 
   <article class="post-content">
