--- a/css/main.css
+++ b/css/main.css
@@ -231,8 +231,8 @@ a:visited { color: #205caa; }
 }
 
 .post-header h1 {
-  font-size: 42px;
-  letter-spacing: -1.75px;
+  font-size: 1.4em;
+  /*letter-spacing: -1.75px;*/
   line-height: 1;
   font-weight: bold;
   color: #333;
@@ -257,7 +257,7 @@ a:visited { color: #205caa; }
 
 .post-content > * {
   margin: 20px 0;
-  font-size: 1em;
+  font-size: 16px;
   line-height: 1.5;
   }
 
