--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,12 @@
 layout: default
 ---
 <div class="post">
-
   <header class="post-header">
-    <h1>{{ page.title }}</h1>
-    <p class="meta">⌚ {{ page.date | date: "%Y-%m-%d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
-    &nbsp&nbsp&nbsp✉{% if page.category %} {{ page.category }} {% endif %}&nbsp&nbsp&nbsp#{% for tag in page.tags %} {{ tag }} {% endfor %}
-    </p>
-
+    <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
+      <p class="meta"><i class="fa fa-calendar"></i> {{ page.date | date: "%Y-%m-%d" }}&nbsp&nbsp&nbsp<i class="fa fa-folder-open"></i>{% if page.category %} <a href="/categories/#{{page.category}}">{{ page.category }}</a> {% endif %}&nbsp&nbsp&nbsp<i class="fa fa-tags"></i>&nbsp{% for tag in page.tags %}&nbsp<a href="/tags/#{{ tag }}">{{ tag }}</a>{% endfor %}</p>
   </header>
-
   <article class="post-content">
   {{ content }}
   </article>
-
 {% include custom/duoshuo.html %}
-
 </div>
