--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
           </a>
     </div>
       <div class="footer-col-2">
-           <p align="left" style="font-size:18px;color:#A8A8A8">安,要记得你心里的梦想</p>
+           <p>© 2014 - 2014 by <a href="http://github.com/taizilongxu">Hackerxu</a></p>
       </div>
     <!-- <div class="footer-col-3 column">
       <p class="text">{{ site.description }}</p>
