--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ a:visited { color: #7C7C7C; }
 	margin-top: -50px;
 	height: 50px;
 	clear:both;
+  font-size: 14px;
 }
 
 .footer-heading {
@@ -124,19 +125,20 @@ a:visited { color: #7C7C7C; }
 
 .footer-col-2{
   float:right;
-  margin-top:24px;
+  margin-top:27px;
   padding-right:20px;
-  font-weight:bold;
 }
 
+.footer-col-2 a {
+  color: #A8A8A8;
+}
 
 .site-footer ul { list-style: none; }
 
 .site-footer li,
 .site-footer p {
-  font-size: 20px;
   letter-spacing: -.3px;
-  color: #828282;
+  color: #B4B4B4;
 }
 
 .github-icon-svg {
@@ -324,6 +326,10 @@ font-weight: bold;
 display: list-item;
 text-align: -webkit-match-parent;
 list-style-type: none;
+}
+
+.post .post-content li{
+  list-style-type: disc;
 }
 
 .post pre,
@@ -658,10 +664,10 @@ border:solid 1px #9C9A9A;
 /* ----------------------------------------------------------*/
 .site-footer .scroll-top {
   position: fixed;
-  bottom: 80px;
+  bottom: 100px;
   right: 80px;
   display: none;
-  font-size: 70px;
+  font-size: 50px;
   cursor: pointer;
   opacity: 0.4;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
