--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,6 @@
     <link rel="stylesheet" href="{{"/css/github.css"| prepend:site.baseurl}}">
   <!-- 返回顶部 -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.1.min.js"></script>
-
+  <script src="{{ "/js/jquery.js" | prepend:site.baseurl }}"></script>
+  <script src="{{ "/js/function_about.js" | prepend:site.baseurl }}"></script>
 </head>
