--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,7 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="{{ "/js/jquery.js" | prepend:site.baseurl }}"></script>
 <script src="{{ "/js/function_about.js" | prepend:site.baseurl }}"></script>
+<!-- {% if page.url == "/404.html" %} -->
+<!-- <meta http-equiv="refresh" content="5; url=/"> -->
+<!-- {% endif %} -->
 </head>
