--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorM
 <!-- highlight -->
 <script src="{{"/js/highlight.pack.js"|prepend:site.baseurl}}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<!-- duoshuo -->
+<!-- pleace change it! -->
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"taizilongxu"};
 (function() {
