--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
             </a>
         </div>
         <div class="footer-col-2">
-            <p>© 2014 - 2014 by <a href="http://github.com/taizilongxu">Hackerxu</a></p>
+            <p>© 2014 - 2014 by <font style="color:#f44336">❤ </font> <a href="http://github.com/taizilongxu">Hackerxu</a></p>
         </div>
         <!-- <div class="footer-col-3 column">
       <p class="text">{{ site.description }}</p>
